# particles

./: gravity  meson.build  particles  run.sh
src/: gravity.c  main.c  particles.c  screen.h
